@@ -88,9 +88,6 @@
 	#include <QByteArray>
 #endif
 
-#ifndef LPSTR
-#define LPSTR char *
-#endif
 
 #ifdef _M_IX86
 #ifndef i386
@@ -3976,7 +3973,7 @@ namespace ppl6 {
 int PPL6Main (int argc, char **argv, CApplication *app);
 #ifdef _WIN32
 #ifndef __MINGW32__
-	int PPL6MainWin (HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow, CApplication *app);
+	int PPL6MainWin (HINSTANCE hInstance, HINSTANCE hPrevInstance, char * lpCmdLine, int nCmdShow, CApplication *app);
 #endif
 #endif
 }
@@ -3987,7 +3984,7 @@ int PPL6Main (int argc, char **argv, CApplication *app);
 	#ifdef _CONSOLE
 		#define PPL6APP(APP) int main(int argc, char **argv) { APP _ppl6app; return ppl6::PPL6TKMain(argc, argv, &_ppl6app); }
 	#else
-		#define PPL6APP(APP) int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow) { APP _ppl6app; return ppl6::PPL6MainWin(hInstance, hPrevInstance, lpCmdLine,nCmdShow, &_ppl6app); }
+		#define PPL6APP(APP) int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, char * lpCmdLine, int nCmdShow) { APP _ppl6app; return ppl6::PPL6MainWin(hInstance, hPrevInstance, lpCmdLine,nCmdShow, &_ppl6app); }
 	#endif
 #else
 	#define PPL6APP(APP) int main(int argc, char **argv) { APP _ppl6app; return ppl6::PPL6Main(argc, argv, &_ppl6app); }
